--- a/i3v/index-i3v.html
+++ b/i3v/index-i3v.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html><html lang="en-US">
-<html>
-<head>
-<title>Page de test / Test page -- i3Vision / Camilo MONTES</title>
-</head>
-<body>
-<script type="text/javascript" charset="utf-8">
+  <html>
+    <head>
+      <title>Page de test / Test page -- i3Vision / Camilo MONTES
+      </title>
+    </head>
+    <body>
+      <h1>This is a sample page using the Genesys message snippet</h1>
+      <p> Test purposes - i3v environment</p>
+      <h3>For assistance, click on the messaging icon below.</h3>
+      <p><b><i> You don't see the icon, make sure to run this page from a Web server, not just opening the page from your computer.</b></i></p>
+      <p> Merci - Thank you.</p>
+      <div>
+        <p> Div 1.</p>
+        <div class="wpb_column vc_column_container vc_col-sm-12">
+          <div class="vc_column-inner">
+            <div class="wpb_wrapper">
+              <div class="wpb_raw_code wpb_raw_js" >
+                <div class="wpb_wrapper">
+                  <script type="text/javascript" charset="utf-8">
   let custom_language_sp = "spanish";
   let custom_language_en = "english";
   (function (g, e, n, es, ys) {
@@ -26,12 +39,13 @@
       customer_language:custom_language_sp
      }
     } 
-  });
-</script>
-<h1>This is a sample page using the Genesys message snippet</h1>
-<p> Test purposes - i3v environment</p>
-<h3>For assistance, click on the messaging icon below.</h3> 
-<p><b><i> You don't see the icon, make sure to run this page from a Web server, not just opening the page from your computer.</b></i></p> 
-<p> Merci - Thank you. </p>
-</body>
-</html>
+  });</script>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="vc_row-full-width vc_clearfix"></div>
+    </body>
+  </html>
